<resources>
    <string name="app_name">欧文时光</string>
    <string name="page_home">首页</string>
    <string name="page_project">已购</string>
    <string name="page_public">我的</string>
    <string name="page_mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_splash01">您需要同意相关协议内容才能继续 使用欧文时光，若您不同意，很遗 憾我们将无法为您提供服务</string>
    <string name="string_notice">拼团即将要在5月20日上线啦！~~~ 爆款来袭5折 起，抄底直降无套路！！！</string>
    <string name="string_getsms">获取验证码</string>
    <string name="string_login">登录</string>
    <string name="hint_sms">请输入短信验证码</string>
    <string name="string_aggrument">我已阅读并同意</string>
    <string name="string_skip">跳过</string>
    <string name="string_uphead">点击上传头像</string>
    <string name="string_wancheng">完成</string>
    <string name="label_name">用户名</string>
    <string name="label_sex">宝宝性别</string>
    <string name="label_his">宝宝出生日期</string>
    <string name="hint_nick">请输入宝贝昵称</string>
    <string name="string_boy">男</string>
    <string name="string_playing">正在播放</string>
    <string name="string_recommend">为你推荐</string>
    <string name="string_buy">购买</string>
    <string name="string_share">完成本视频内容，进行分享之后解锁下一视频。</string>
    <string name="order_empty">您还没有购买相关的订单</string>
    <string name="string_ordernum">单号</string>
    <string name="label_ordernum">下单编号</string>
    <string name="copy">复制</string>
    <string name="label_time">下单时间</string>
    <string name="kefu">联系客服</string>
    <string name="kftime">服务时间:</string>
    <string name="share_wx">分享给好友</string>
    <string name="share_wxquan">分享到朋友圈</string>
    <string name="label_notice">系统通知</string>
    <string name="open_notice">您可以在APP【我的-设置-系统通知】中，开启APP的系统通知 功能，以及前往系统APP详情开启系统通知。</string>
    <string name="huodong_notice">促销福利、最新活动等通知</string>
    <string name="service_notice">服务通知</string>
    <string name="select_sex">请选择宝宝性别</string>
    <string name="course_empty">课程列表为空</string>
</resources>