<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PerfectActivity"
    app:shape_startColor="@color/FE9520"
    app:shape_endColor="#FEAD20">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/perfect_linet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.04"
        android:orientation="horizontal"/>
    <com.hjq.bar.TitleBar
        android:id="@+id/title_perfect"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/transparent"
        app:lineVisible="false"/>
    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_skip"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/perfect_linet"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_skip"
        android:layout_marginTop="31.5dp"
        app:shapeAppearance="@style/circleImage"
        app:strokeColor="@color/white" />

    <TextView
        android:id="@+id/tv_uphead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_uphead"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_head"
        android:layout_marginTop="9.5dp"/>

    <com.hjq.shape.layout.ShapeConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:shape_solidColor="@color/F5F5F5"
        app:shape_topLeftRadius="25dp"
        app:shape_topRightRadius="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_uphead"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <com.hjq.shape.layout.ShapeConstraintLayout
            android:id="@+id/layout_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.34"
            android:padding="15.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shape_radius="11dp"
            app:shape_solidColor="@color/white"
            tools:layout_editor_absoluteY="14dp">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="@color/black"
                android:textSize="17dp"
                app:layout_constraintBottom_toTopOf="@+id/label_sex"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:layout_editor_absoluteX="15dp" />

            <TextView
                android:id="@+id/label_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sex"
                android:textColor="@color/black"
                android:textSize="17dp"
                app:layout_constraintBottom_toTopOf="@+id/label_his"
                app:layout_constraintTop_toBottomOf="@+id/label_name"
                tools:layout_editor_absoluteX="15dp" />

            <TextView
                android:id="@+id/label_his"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_his"
                android:textColor="@color/black"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_sex"
                tools:layout_editor_absoluteX="15dp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nick"
                android:textColorHint="@color/CCCCCC"
                android:textColor="@color/CCCCCC"
                android:textSize="17dp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label_name"
                app:layout_constraintBottom_toBottomOf="@+id/label_name"/>
            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_sex"
                android:textColorHint="@color/CCCCCC"
                android:textSize="17dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label_sex"
                app:layout_constraintBottom_toBottomOf="@+id/label_sex"/>

            <TextView
                android:id="@+id/tv_his"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="请选择宝贝生日"
                android:textColorHint="@color/CCCCCC"
                android:textColor="@color/CCCCCC"
                android:textSize="17dp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label_his"
                app:layout_constraintBottom_toBottomOf="@+id/label_his"/>
        </com.hjq.shape.layout.ShapeConstraintLayout>
        <com.hjq.shape.view.ShapeButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_wancheng"
            android:textColor="@color/white"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/layout_info"
            android:layout_marginTop="61dp"
            app:shape_solidColor="@color/FE9520"
            app:shape_radius="21.5dp"/>

    </com.hjq.shape.layout.ShapeConstraintLayout>

</com.hjq.shape.layout.ShapeConstraintLayout>