<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NoticeActivity"
    android:background="@color/F5F5F5">
    <com.hjq.bar.TitleBar
        android:id="@+id/title_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="通知管理"
        app:titleSize="18dp"
        app:titleStyle="bold"
        app:leftIconTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/notice_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/notice_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <TextView
        android:id="@+id/label_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_notice"
        android:textColor="@color/F1A1A1A"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@id/notice_left"
        app:layout_constraintTop_toBottomOf="@id/title_notice"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已开启"
        android:textSize="13dp"
        android:textColor="@color/A8A8A8"
        android:drawableRight="@drawable/jump_icon"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@id/title_notice"
        app:layout_constraintEnd_toStartOf="@id/notice_right"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tv_open_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_notice"
        app:layout_constraintStart_toStartOf="@id/label_notice"
        app:layout_constraintTop_toBottomOf="@id/label_notice"
        app:layout_constraintEnd_toStartOf="@id/notice_right"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/label_notice02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="当开启系统通知功能时："
        android:textColor="@color/F1A1A1A"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@id/notice_left"
       app:layout_constraintTop_toBottomOf="@id/tv_open_notice"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_open_notice02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="我们会通过您设备的系统通知，向您推送您可能感兴趣的活动消
息和您的商品服务信息。"
        app:layout_constraintStart_toStartOf="@id/label_notice02"
        app:layout_constraintEnd_toStartOf="@id/notice_right"
        app:layout_constraintTop_toBottomOf="@id/label_notice02"
        android:layout_marginTop="15dp"/>
    
    <com.hjq.shape.layout.ShapeConstraintLayout
        android:id="@+id/layout_huodong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="20dp"
        android:paddingEnd="15dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toEndOf="@id/notice_left"
        app:layout_constraintEnd_toStartOf="@id/notice_right"
        app:layout_constraintTop_toBottomOf="@id/tv_open_notice02"
        app:shape_solidColor="@color/white"
        app:shape_radius="11dp"
        android:layout_marginTop="40dp">
        <TextView
            android:id="@+id/label_notice03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="活动优惠"
            android:textSize="17dp"
            android:textColor="@color/F333333"/>
        <TextView
            android:id="@+id/label_notice04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huodong_notice"
            android:textSize="12dp"
            android:textColor="@color/A8A8A8"
            app:layout_constraintStart_toStartOf="@id/label_notice03"
            app:layout_constraintTop_toBottomOf="@id/label_notice03"
            android:layout_marginTop="16dp"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </com.hjq.shape.layout.ShapeConstraintLayout>

    <com.hjq.shape.layout.ShapeConstraintLayout
        android:id="@+id/layout_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="20dp"
        android:paddingEnd="15dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toEndOf="@id/notice_left"
        app:layout_constraintEnd_toStartOf="@id/notice_right"
        app:layout_constraintTop_toBottomOf="@id/layout_huodong"
        app:shape_solidColor="@color/white"
        app:shape_radius="11dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/label_notice05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_notice"
            android:textSize="17dp"
            android:textColor="@color/F333333"/>
        <TextView
            android:id="@+id/label_notice06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="主动开启的功能服务类通知"
            android:textSize="12dp"
            android:textColor="@color/A8A8A8"
            app:layout_constraintStart_toStartOf="@id/label_notice05"
            app:layout_constraintTop_toBottomOf="@id/label_notice05"
            android:layout_marginTop="16dp"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </com.hjq.shape.layout.ShapeConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>